macros/tests/ui/declare/circular_dependency_fail.stderr
error: There is a directly circle depends exist, this will cause infinite loop: id3.size ~> id1 , id2.size ~> id3 , id1.size ~> id2
  --> tests/ui/declare/circular_dependency_fail.rs:7:13
   |
7  |         id: id1,
   |             ^^^
8  |         size: id2.size,
   |         ^^^^  ^^^
...
11 |         id: id2,
   |             ^^^
12 |         size: id3.size,
   |         ^^^^  ^^^
...
15 |         id: id3,
   |             ^^^
16 |         size: id1.size,
   |         ^^^^  ^^^
   |
note: You can use `change` event to break circle, which will trigger only if the value really changed by compare if the value equal before modify and after.
  --> tests/ui/declare/circular_dependency_fail.rs:8:9
   |
8  |         size: id2.size,
   |         ^^^^
...
12 |         size: id3.size,
   |         ^^^^
...
16 |         size: id1.size,
   |         ^^^^

error: There is a directly circle depends exist, this will cause infinite loop: parent.margin ~> child , child.margin ~> parent
  --> tests/ui/declare/circular_dependency_fail.rs:23:11
   |
23 |       id: parent,
   |           ^^^^^^
24 |       size: Size::zero(),
25 |       margin: child.margin.clone(),
   |       ^^^^^^  ^^^^^^^^^^^^
26 |       SizedBox{
27 |         id: child,
   |             ^^^^^
28 |         size: Size::zero(),
29 |         margin: parent.margin.clone(),
   |         ^^^^^^  ^^^^^^^^^^^^^
   |
note: You can use `change` event to break circle, which will trigger only if the value really changed by compare if the value equal before modify and after.
  --> tests/ui/declare/circular_dependency_fail.rs:25:7
   |
25 |       margin: child.margin.clone(),
   |       ^^^^^^
...
29 |         margin: parent.margin.clone(),
   |         ^^^^^^

error: There is a directly circle depends exist, this will cause infinite loop: a ~> a
  --> tests/ui/declare/circular_dependency_fail.rs:36:11
   |
36 |       id: a,
   |           ^
...
39 |     modify_on a.size ~> a.size
   |                         ^
   |
note: You can use `change` event to break circle, which will trigger only if the value really changed by compare if the value equal before modify and after.
  --> tests/ui/declare/circular_dependency_fail.rs:36:11
   |
36 |         id: a,
   |  ___________^
37 | |       size: Size::zero(),
38 | |     }
39 | |     modify_on a.size ~> a.size
   | |_________________________^
